[package]
name = "kyute-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22"
palette = "0.6"
tokio = { version = "1.16.1", features = ["rt", "sync"] }
serde = { version = "1.0", optional = true }
imbl = { version = "1", optional = true }
string_cache = "0.8.3"
kyute-common-macros = { path = "macros" }

[features]
serializing = ["serde", "palette/serializing"]