[package]
name = "kyute-compose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.10.0"
kyute-compose-macros = { path="macros" }
kyute-common = { path = "../kyute-common" }

[dev-dependencies]
dummy-waker = "1.1.0"
rand = "0.8.5"
