[package]
name = "kyute-shell"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# windowing
anyhow = "1.0.43"
winit = { path = "../ext/winit" }
#euclid = "0.22"   # basic 2D geometric types
bitflags = "1.2.1"
lazy_static = "1.4.0"
keyboard-types = "0.6"
once_cell = "1.7.2"
float-cmp = "0.9"
raw-window-handle = "0.4"
tracing = "0.1.25"
thiserror = "1.0.24"
graal = { path = "../graal" }
kyute-common = { path = "../kyute-common" }
windows = { version = "0.33.0", features = ["Win32_Graphics_Direct2D",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_System_Com",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D"] }
serde = { version = "1.0", optional = true }

[features]
serializing = ["serde"]