[package]
name = "kyute-shell"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"


[dependencies]
# windowing
anyhow = "1.0.43"
winit = { git = "https://github.com/ennis/winit", rev = "178cf8ebbeedce48c4abb16b9aa3aec52f9281b5" }
skia-safe = { version = "0.49.0", features = ["vulkan"] }
#euclid = "0.22"   # basic 2D geometric types
bitflags = "1.2.1"
lazy_static = "1.4.0"
keyboard-types = "0.6"
once_cell = "1.7.2"
float-cmp = "0.9"
raw-window-handle = "0.4"
tracing = "0.1.25"
thiserror = "1.0.24"
parking_lot = "0.12.0"
#graal = { git = "https://github.com/ennis/graal.git", rev = "0b13c41bed0e33b5b30bddf1af24b04fdaac9054" }
graal = { path = "../../graal/graal"  }
kyute-common = { path = "../kyute-common" }
windows = { version = "0.39.0", features = [
    "implement",
    "Win32_Graphics_Direct2D",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D12",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D_Common",
    "Foundation_Numerics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Security",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D"] }

serde = { version = "1.0", optional = true }
threadbound = "0.1.2"

[features]
serializing = ["serde"]