[package]
name = "kyute-style-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyute = { path="../kyute" }
tracing-subscriber = { version = "0.2.17", features = ["fmt"] }
string_cache = "0.8.2"

