[package]
name = "kyute-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
kyute-common = { path="../kyute-common" }
thiserror = "1.0.24"
windows = { version = "0.33.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D_Common",
    "implement"] }
