[package]
name = "kyute"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
kyute-shell = { path = "../kyute-shell" }
winit = { path = "../ext/winit" }
anyhow = "1.0.27"
euclid = {version="0.20.8", features=["serde"]}
palette = { version="0.5.0", features=["named", "serializing"] }
lazy_static = "1.4.0"
log = "0.4.8"
winapi = "0.3.8"
unicode-segmentation = "1.6.0"
replace_with = "0.1.5"
generational-indextree = "1.0.2"
num-traits = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
ron = "*"
config = "0.10.1"
futures = "0.3.5"

[dev-dependencies]
pretty_env_logger = "0.4.0"