[package]
name = "kyute"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[dependencies]
kyute-macros = { path="macros" }
kyute-shell = { path="../kyute-shell", features = ["serializing"] }
tracing = { version = "0.1.25", features = ["attributes"] }
euclid = "0.22"
keyboard-types = "0.6"
fnv = "1.0.7"
unicode-segmentation = "1.8.0"
palette = "0.6.0"
bitflags = "1.3.1"
slotmap = "1.0.6"
anyhow = "1.0.44"
thiserror = "1.0.29"
imbl = { version = "1", optional = true }
approx = "0.5"
serde_json = "1.0.78"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16.1", features = ["rt", "sync", "time", "rt-multi-thread"] }

[dev-dependencies]
tracing-subscriber = { version = "0.2.19", features = ["fmt"] }
rand = "0.8.4"

