[package]
name = "kyute"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[dependencies]
kyute-macros = { path="macros" }
kyute-shell = { path="../kyute-shell", features = ["serializing"] }
kyute-common = { path="../kyute-common", features = ["serializing", "imbl"] }
svgtypes = "0.8.0"  # SVG path parser and path segment definitions
skia-safe = { version = "0.49.0", features = ["vulkan"] }
tracing = { version = "0.1.32", features = ["attributes"] }
euclid = "0.22"
keyboard-types = "0.6"
fnv = "1.0.7"
unicode-segmentation = "1.8.0"
palette = "0.6.0"
bitflags = "1.3.1"
slotmap = "1.0.6"
anyhow = "1.0.44"
thiserror = "1.0.29"
approx = "0.5"
serde_json = "1.0.78"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16.1", features = ["rt", "sync", "time", "rt-multi-thread"] }
notify = "5.0.0-pre.13"
threadbound = "0.1.2"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
syn = { version = "1.0", features = ["parsing"] }
nom = "7"
rowan = "0.15.4"

[dev-dependencies]
tracing-subscriber = { version = "0.3.10", features = ["fmt", "env-filter"] }
tracing-tracy = "0.8.0"
rand = "0.8.4"

[features]
imbl = ["kyute-common/imbl"]
#tweakable = ["syn"]

