[package]
name = "kyute2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kurbo = "0.9"
glazier = { git = "https://github.com/ennis/glazier.git", branch = "main" }
skia-safe = { version = "0.62.0", features = ["textlayout"] }
once_cell = "1.17.1"
threadbound = "0.1.6"
tracing = "0.1.37"
graal = { path = "../../graal/graal" , optional = true }
kyute-compose = { path = "../kyute-compose" }
kyute-common = { path="../kyute-common" }
kyute2-macros = { path="macros" }
slotmap = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
string_cache = "0.8.7"
palette = "0.7.1"
anyhow = "1.0"
thiserror = "1.0"
bitflags = "2.2.1"
svgtypes = { version = "0.11.0", optional = true }
roxmltree = { version = "0.18.0", optional = true }
usvg = { version = "0.32.0", optional = true }


# Windows dependencies
[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.48.0", features = [
    "implement",
    "Win32_Graphics_Direct2D",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D12",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D_Common",
    "System",
    "Foundation",
    "Graphics_DirectX",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Foundation_Numerics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Security",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.10", features = ["fmt", "env-filter"] }
tracing-tree = "0.2.1"
tracing-tracy = "0.10.2"
spin_sleep = "1.1.1"

[build-dependencies]
string_cache_codegen = "0.5.2"

[features]
default = ["d3d", "svg"]
vulkan = ["dep:graal", "skia-safe/vulkan"]
d3d = ["skia-safe/d3d"]
svg = ["dep:roxmltree", "dep:usvg", "dep:svgtypes"]