[package]
name = "kyute-common-macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.27"
syn = { version = "1.0", features = ["derive", "extra-traits"] }
proc-macro2 = "1.0.67"

[lib]
proc-macro = true