[package]
name = "kyute-compose-macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
syn = { version = "2.0", features = ["full", "visit-mut"] }
proc-macro2 = "1.0.29"

[lib]
proc-macro = true